# muse

./: .env.example  .gitignore  HANDOFF.md  Makefile  docker-compose.yml  railway.toml
backend/: Dockerfile  alembic.ini  celerybeat-schedule.db  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_videos.py  0003_renders.py  0004_distributions.py  0005_analytics.py  0006_video_platform.py  0007_aesthetics.py  0008_aesthetic_videos.py  0009_section_templates.py  0010_song_clip_region.py  0011_drafts.py  0012_video_storage_key.py  0013_song_lyrics_transcription.py  0014_draft_lyric_style.py  0015_draft_templates.py  0016_video_user_id.py
backend/app/: config.py  database.py  deps.py  main.py
backend/app/models/: __init__.py  aesthetic.py  base.py  distribution.py  draft.py  draft_template.py  render.py  render_video.py  section_template.py  song.py  user.py  video.py
backend/app/routers/: aesthetics.py  analytics.py  auth.py  distributions.py  drafts.py  jobs.py  renders.py  section_templates.py  songs.py  tiktok.py  videos.py
backend/app/schemas/: aesthetic.py  distribution.py  draft.py  draft_template.py  render.py  section_template.py  song.py  user.py  video.py
backend/app/services/: qdrant.py  redis_client.py  storage.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: audio.py  distribute.py  lyrics.py  metrics.py  render.py  video.py
frontend/: .vade-report  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
(+14 files in other folders)
